--- a/.env.example
+++ b/.env.example
@@ -59,9 +59,6 @@ GOOGLE_CLIENT_ID=
 GOOGLE_CLIENT_SECRET=
 GOOGLE_REDIRECT_URL=
 
-COGNITO_HOST=
 COGNITO_CLIENT_ID=
-COGNITO_CLIENT_SECRET=
-COGNITO_CALLBACK_URL=
-COGNITO_LOGIN_SCOPE=
-COGNITO_SIGN_OUT_URL=
+COGNITO_REGION=
+COGNITO_POOL_ID=
