--- a/composer.json
+++ b/composer.json
@@ -7,13 +7,15 @@
     "require": {
         "php": "^8.0",
         "fruitcake/laravel-cors": "^2.0.5",
+        "gree/jose": "^2.2",
         "guzzlehttp/guzzle": "^7.2",
         "laravel/framework": "^9.0",
         "laravel/passport": "^11.3",
         "laravel/sanctum": "^2.14",
         "laravel/socialite": "^5.5",
         "laravel/tinker": "^2.7",
-        "socialiteproviders/cognito": "^4.1"
+        "socialiteproviders/cognito": "^4.1",
+        "phpseclib/phpseclib": "^2.0.0"
     },
     "require-dev": {
         "fakerphp/faker": "^1.9.1",
